fix contact overflow mobile

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
+    outline: 1px solid red;
 }
 html, body {
   overflow-x: hidden;
